--- a/scss/main.scss
+++ b/scss/main.scss
@@ -206,7 +206,7 @@ h1 {
 
 .intro-text {
   color: #eee;
-  font-size: 40px;
+  font-size: 80px;
   opacity: 1;
   font-family: "poppins";
   font-weight: 600;
@@ -496,8 +496,7 @@ h1 {
   .main {
     @include flex;
     min-height: 100vh;
-    width: 100%;
-    overflow: hidden;
+    max-width: 100vw;
     flex-direction: column;
     justify-content: space-evenly;
   }
